<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--<string name="app_name">NPS PP</string>-->
    <string name="app_name">NPVIU PP</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_transfer_order_adapter">TransferOrderAdapter</string>
    <string name="title_activity_transfer_detail">Confirm Transfer Order</string>
    <string name="title_activity_picking_transfer_detail">Confirm Picking Transfer Order</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Setting URL</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_back">Back</string>
    <string name="action_prev">Prev</string>
    <string name="action_clear">Clear Cache</string>
	<string name="action_font">Font size</string>
	<string name="testing_scan">Testing Scan</string>
    <string name="scan_barcode">SCAN</string>
    <string name="input_barcode">Scan or Input PWO Number/Employee ID</string>


    <!--<string name="app_name">Broadcast Style Demo</string>-->
    <!--<string name="scan_barcode">Please Scan Barcode</string>-->
    <string name="sound">Scan Sound</string>
    <string name="vibrate">Scan Vibration</string>
    <string name="scan_continuous">Scan Continuous</string>
    <string name="input_time">Please Input Time</string>
    <string name="cotinue_time">Continuous Time</string>
    <string name="continuous_light">Continuous Light</string>
    <string name="duration_time">Duration Time</string>
    <string name="analog_button">Analog button scan</string>
    <string name="exposure">exposure(Two-dimensional scanning head)</string>
    <string name="clickToModify">click to modify</string>


    //xuxin
    <!--<string name="app_name">Scan test</string>-->
    <string name="decode_results">Scan results:</string>
    <string name="single_shoot">Single scan</string>
    <string name="continuous_shoot">Continuous scan</string>
    <string name="exit_button">Exit</string>
    <string name="clear_button">Clear</string>
    <string name="white_light">Fill light 1</string>
    <string name="read_light">Fill light 2</string>
    <string name="location_light">Normal lamp</string>
    <string name="hard_decode">Hardware decode</string>
    <string name="auto_test">Autotest</string>
    <string name="reference_number">Reference barcode</string>
    <string name="total_of_scaner">Total times</string>
    <string name="total_of_scaner_hint">&gt;1000</string>
    <string name="time_interval">Time interval</string>
    <string name="time_interval_hint">&gt;=200</string>
    <string name="test_result">Test result</string>
    <string name="start_test">Start test</string>
    <string name="stop_test">Stop test</string>
    <string name="test_total">Total: </string>
    <string name="test_success">Success: </string>
    <string name="test_fail">Fail: </string>
    <string name="test_timeout">TimeOut:</string>
    <string name="test_fail_list">Error list</string>
    <string name="settings">Settings</string>
    <string name="scan_total">The total of continuous scan:</string>
    <string name="switch_to_single_scan">Please switch to single scan mode!</string>
    <string name="scan_message">Connect scan head abnormal!</string>
    <string name="dialog_ok">Confirm</string>
    <string name="scan_ring">Tone</string>
    <string name="save_result">Save results</string>
    <string name="saving">Saving, please wait.....</string>
    <string name="save_success">Save successful,located in the "results" directory of the SDCard!</string>
    <string name="save_fail">Save failed, please try again!</string>
    <string name="sdcard_not_exist">SdCard isn`t ready, please disconnect the computer and try again!</string>
    <string name="not_blank">Can not be empty!</string>
    <string name="error_input">Enter a appropriate values!</string>
    <string name="try_again">Please try again!</string>
    <string name="average_time">The average time is %1$f ms.</string>
</resources>
